FPS need to solve

--- a/opencvtutorial/videosender.html
+++ b/opencvtutorial/videosender.html
@@ -4,13 +4,13 @@
 	<title>Hello</title>
 </head>
 <body>
-	<video id="videoInput" style="display:none"></video>
   <canvas id="videoOutput"></canvas>
   <button onclick=stream()>Send</button>
 </body>
 <script>
+  console.log(123);
   var w = 320, h = 240;
-  var url = "ws://localhost:3000"
+  var url = "ws://localhost:5000"
   var ws = new WebSocket(url);
   ws.onopen = function(){
 	  console.log("Websocket is connected.");
@@ -19,13 +19,8 @@
 	  console.log(msg.data);
   }
 
-  navigator.getUserMedia = navigator.getUserMedia || navigator.webkitGetUserMedia || navigator.mozGetUserMedia;
-
   var constraints = {audio: false, video: true};
-  var video = document.getElementById("videoInput");
-  video.width = w;
-  video.height = h;
-  function successCallback(stream){
+  /*function successCallback(stream){
   	video.srcObject = stream;
   	video.play();
   }
@@ -33,13 +28,14 @@
   function errorCallback(error){
    	console.log(error);
   }
-  navigator.getUserMedia(constraints, successCallback, errorCallback);
+  navigator.mediaDevices.getUserMedia(constraints, successCallback, errorCallback);*/
 	var canvas = document.getElementById("videoOutput");
   canvas.width = w;
   canvas.height = h;
+
   var ctx = canvas.getContext("2d");
   function processImage(){
-        ctx.drawImage(video, 0, 0, w, h);
+        ctx.drawImage(0, 0, w, h);
         setTimeout(processImage, 1);
   }
   processImage();
@@ -52,5 +48,6 @@
     var rawData = canvas.toDataURL("image/jpeg", 0.5);
     ws.send(rawData);
   }
+
 </script>
 </html>
